# tech-docs

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml
.github/workflows/: github-pages-deploy.yaml  github-pages.yaml
.lsp/.cache/: db.transit.json
Computer Science/Algorithms/: greedy-algorithms.md
Messaging/Kafka/: 02.broker.md  03.topic.md  04.producer.md  05.consumer.md  09.rest-proxy.md  (+2 more)
Networking/: dns.md  tcp.md
agile/: agile.md  extreme-programming.md  jira.md  kanban.md
ai/: 1. Machine Learning.md  2. Deep Learning.md
algorithms/: coding.md  common-problems.md  interview-behavior.md  python-cheatsheet.md  recursion.md
algorithms/patterns/others/load-balancer/: .gitignore  README.md  balancer.py  load-balancer.md  main.py  pyproject.toml  strategies.py  test_main.py
algorithms/patterns/others/load-balancer/src/load_balancer/: __init__.py  balancer.py  errors.py  main.py  strategies.py
algorithms/patterns/others/load-balancer/tests/: test_balancer.py  test_concurrency.py  test_strategies.py
algorithms/patterns/others/url-shortener/: README.md  main.py  pyproject.toml  shortener.py  strategies.py  test_concurrency.py  test_main.py  test_shortener.py  test_strategies.py  test_url_shortener.py  url-shortener.md  url_shortener.py
artificial-intelligence/: 1.artificial-intelligence.md  2.deep-learning.md  3.transformer.md  4.mlops.md  artificial-intelligence.md
cicd/: cicd-platform-system-design.excalidraw  cicd.md
cloud/: cloud.md  others.md
compilers/: build-system.md
computer-science/: Topics.md
container/: 01.container.md  02.image.md
dev-tools/: code-companion.md  licensing.md  lsp.md  mcp.md  semver.md
devops/: other.md
distributed-systems/: strangler-application.md
game-development/: renderers.md
iam/: yubikey.md
language/: characteristics.md  languages.md  neovim.md  oop.md  solid.md
language/c++/: CMakeLists.txt  cpp.md  pass-by-reference.md  stl.md
language/c++/cli/: clang++.md
language/c++/libraries/exception/classes/: exception.cpp
language/c++/libraries/iostream/functions/: endl.cpp
language/c++/libraries/iostream/variables/: cerr.cpp  cin.cpp  cout.cpp
language/c++/libraries/list/classes/: list.cpp
language/c++/libraries/list/classes/list/: begin.cpp  end.cpp  erase.cpp  list.cpp  push_back.cpp
language/c++/libraries/list/queue/: front.cpp
language/c++/libraries/map/classes/map/: map.cpp
language/c++/libraries/queue/classes/: queue.cpp
language/c++/libraries/queue/classes/queue/: back.cpp  pop.cpp  size.cpp
language/c++/libraries/stack/classes/stack/: empty.cpp  pop.cpp  push.cpp  stack.cpp  top.cpp
language/c++/libraries/string/types/: string.cpp
language/c++/libraries/unordered_map/classes/map/: unordered_map.cpp
language/c++/libraries/utility/structs/: pair.cpp
language/c++/libraries/vector/classes/: vector.cpp
language/c++/libraries/vector/classes/vector/: at.cpp  back.cpp  clear.cpp  empty.cpp  erase.cpp  insert.cpp  push_back.cpp  vector.cpp
language/c++/syntax/: macro.cpp
language/c++/syntax/data/: class.cpp  new.cpp  reference.cpp  struct.cpp
language/c++/syntax/loop/: for.cpp  iterator.cpp
language/c++/syntax/operator/: <<.cpp  delete.cpp  new.cpp
language/c/cli/: CMakeLists.txt  clang.md  cmake.md  gcc.md
machine-learning/: fine-tuning.md  foundation-models.md  machine-learning.md  mlops.md  performance.md  training.md
machine-learning/agents/langchain/demo/: .env.example  pyproject.toml
machine-learning/llm/agents/frameworks/langchain/demo-documentation-helper/: .gitignore  pyproject.toml
machine-learning/llm/agents/frameworks/langchain/demo-documentation-helper/src/: backend.py  ingestion.py
machine-learning/llm/agents/frameworks/langchain/modules/rag/: pyproject.toml  rag.md
machine-learning/llm/agents/frameworks/langchain/modules/rag/src/: rag.py
management/: c-levels.md  management.md
network/: dns.md
networking/: cidr.md  html-scraping.md  load-balancer.md  networking.md  proxy.md
observability/: instrumentation.md  observability.md  telemetry-signals.md  tools.md
resilience/: backpressure.md  performance.md  rate-limiting.md  resilience-lifecycle.md  resilience.md
security/: yubikey.md
sre/: observability.md  service-level.md
(+7684 files in other folders)
