[project]
name = "load-balancer"
version = "0.1.0"
description = "In-memory thread-safe load balancer with pluggable selection strategies."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
