[project]
name = "load-balancer"
version = "0.1.0"
description = "In-memory thread-safe load balancer with pluggable selection strategies."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
