[project]
name = "url-shortener"
version = "0.1.0"
description = "Thread-safe URL shortener with pluggable hashing strategies."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
