[project]
name = "demo-documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langchain-community>=0.4",
    "langchain-text-splitters>=1.1",
    "beautifulsoup4>=4.14",
]
