[project]
name = "Demo"
version = "0.1.0"
description = "My reference project"
requires-python = "~=3.13.0"
dependencies = [
  "langchain>=1.2",
  "langchain-anthropic>=1.4",
  "langchain-ollama>=1.0.1",
  "langchain-community>=0.4",
  "langchain-text-splitters>=1.1",
  "beautifulsoup4>=4.14",
  "langchain-pinecone>=0.2.13",
]
